--- a/email.html
+++ b/email.html
@@ -225,8 +225,37 @@
     }
 
     .unsubscribe-text {
-      margin: 0;
+      margin: 0 0 15px 0;
       line-height: 1.5;
+    }
+
+    .unsubscribe-form {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      margin-top: 10px;
+    }
+
+    .unsubscribe-input {
+      padding: 8px 12px;
+      border: 1px solid #e5e7eb;
+      border-radius: 4px;
+      font-size: 14px;
+      width: 200px;
+    }
+
+    .unsubscribe-btn {
+      background: #0D3AC4;
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    .unsubscribe-btn:hover {
+      background: #0a2d9b;
     }
 
     .unsubscribe-link {
@@ -350,7 +379,11 @@
 
   <!-- Unsubscribe Section -->
   <div class="unsubscribe-section">
-    <p class="unsubscribe-text">If you no longer wish to receive these emails, you can <a href="https://www.ufetech.mn/unsubscribe" class="unsubscribe-link">unsubscribe here</a></p>
+    <p class="unsubscribe-text">If you no longer wish to receive these emails, you can unsubscribe below:</p>
+    <form class="unsubscribe-form">
+      <input type="email" placeholder="Enter your email" class="unsubscribe-input" required>
+      <button type="submit" class="unsubscribe-btn">Unsubscribe</button>
+    </form>
   </div>
 
   <!-- Footer -->
